--- a/RankFit/Views/Base.lproj/Main.storyboard
+++ b/RankFit/Views/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7WW-vh-skv">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,8 +21,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="kX8-aA-G73" kind="relationship" relationship="viewControllers" id="tUe-Ia-kRU"/>
-                        <segue destination="jg5-63-FDK" kind="relationship" relationship="viewControllers" id="y12-cp-wBX"/>
                         <segue destination="CSP-Sh-Xz0" kind="relationship" relationship="viewControllers" id="Jmx-l2-eB5"/>
+                        <segue destination="jg5-63-FDK" kind="relationship" relationship="viewControllers" id="y12-cp-wBX"/>
                         <segue destination="OSz-Z7-xI5" kind="relationship" relationship="viewControllers" id="udB-Xs-OMN"/>
                         <segue destination="NXe-pc-nJ3" kind="relationship" relationship="viewControllers" id="KZg-V6-IKP"/>
                     </connections>
@@ -48,7 +49,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BNK-lk-Nh3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="892" y="-151"/>
+            <point key="canvasLocation" x="925" y="-47"/>
         </scene>
         <!--initialExercise-->
         <scene sceneID="UCq-9P-Xqh">
@@ -58,7 +59,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LVa-lf-mHI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="921" y="-27"/>
+            <point key="canvasLocation" x="893" y="-151"/>
         </scene>
         <!--initialTemp-->
         <scene sceneID="iYD-Xk-FAt">
@@ -70,10 +71,10 @@
             </objects>
             <point key="canvasLocation" x="908" y="104"/>
         </scene>
-        <!--SettingViewController-->
+        <!--initialSetting-->
         <scene sceneID="Pel-N4-A1e">
             <objects>
-                <viewControllerPlaceholder storyboardName="Setting" referencedIdentifier="SettingViewController" id="NXe-pc-nJ3" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Setting" referencedIdentifier="initialSetting" id="NXe-pc-nJ3" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Setting" image="gear" catalog="system" id="W2Q-zS-arG"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uGc-Nr-f0F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
